[package]
name = "snake"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = { verison = "0.27.0", features = ["event-stream"]}
futures = "0.3.30"
ncurses = "6.0.0"
rand = "0.8.5"
tokio = { version = "1.37.0", features = ["full"] }
